k8s/apps/meow/radarr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  type: ClusterIP
  selector:
    app: radarr
  ports:
    - name: http
      port: 80
      targetPort: 7878
