k8s/apps/meow/radarr/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`movies.meow.litarvan.com`)
      services:
        - name: radarr
          port: http
